# SatVLM

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/routers/: cloud.py  compare.py  describe.py  segment.py
app/services/: model_manager.py
app/utils/: image_utils.py  prompts.py
config/: settings.py
scripts/: download_model.py  vertex_finetune.py
tests/: conftest.py  test_38cloud.py  test_cloud.py  test_cloud_parser.py  test_compare.py  test_custom_data.py  test_describe.py  test_error_paths.py  test_health.py  test_image_utils.py  test_negative.py  test_prompts.py  test_real_backend.py  test_response_quality.py  test_segment.py  test_ucmerced_dataset.py  test_with_real_image.py
